2011-06-09  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: protocol: json: Whitespace can be inserted between any pair of tokens.
        https://bugs.webkit.org/show_bug.cgi?id=62377

        * inspector/report-protocol-errors-expected.txt:
        * inspector/report-protocol-errors.html:
2011-06-09  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: protocol: json: Whitespace can be inserted between any pair of tokens.
        https://bugs.webkit.org/show_bug.cgi?id=62377

        * inspector/InspectorValues.cpp:

Canonical link: https://commits.webkit.org/77936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88530 268f45cc-cd09-0410-ab3c-d52691b4dbfc