Source/WebCore/inspector/InspectorValues.cpp
@@ -186,10 +186,15 @@ bool parseStringToken(const UChar* start, const UChar* end, const UChar** tokenE
     return false;
 }
 
-Token parseToken(const UChar* start, const UChar* end, const UChar** tokenEnd)
+Token parseToken(const UChar* start, const UChar* end, const UChar** tokenStart, const UChar** tokenEnd)
 {
+    while (start < end && u_isspace(*start))
+        ++start;
+
     if (start == end)
         return INVALID_TOKEN;
+
+    *tokenStart = start;
 
     switch (*start) {
     case 'n':
@@ -330,8 +335,9 @@ PassRefPtr<InspectorValue> buildValue(const UChar* start, const UChar* end, cons
         return 0;
 
     RefPtr<InspectorValue> result;
+    const UChar* tokenStart;
     const UChar* tokenEnd;
-    Token token = parseToken(start, end, &tokenEnd);
+    Token token = parseToken(start, end, &tokenStart, &tokenEnd);
     switch (token) {
     case INVALID_TOKEN:
         return 0;
@@ -346,7 +352,7 @@ PassRefPtr<InspectorValue> buildValue(const UChar* start, const UChar* end, cons
         break;
     case NUMBER: {
         bool ok;
-        double value = charactersToDouble(start, tokenEnd - start, &ok);
+        double value = charactersToDouble(tokenStart, tokenEnd - tokenStart, &ok);
         if (!ok)
             return 0;
         result = InspectorBasicValue::create(value);
@@ -354,7 +360,7 @@ PassRefPtr<InspectorValue> buildValue(const UChar* start, const UChar* end, cons
     }
     case STRING: {
         String value;
-        bool ok = decodeString(start + 1, tokenEnd - 1, &value);
+        bool ok = decodeString(tokenStart + 1, tokenEnd - 1, &value);
         if (!ok)
             return 0;
         result = InspectorString::create(value);
@@ -363,7 +369,7 @@ PassRefPtr<InspectorValue> buildValue(const UChar* start, const UChar* end, cons
     case ARRAY_BEGIN: {
         RefPtr<InspectorArray> array = InspectorArray::create();
         start = tokenEnd;
-        token = parseToken(start, end, &tokenEnd);
+        token = parseToken(start, end, &tokenStart, &tokenEnd);
         while (token != ARRAY_END) {
             RefPtr<InspectorValue> arrayNode = buildValue(start, end, &tokenEnd, depth + 1);
             if (!arrayNode)
@@ -372,10 +378,10 @@ PassRefPtr<InspectorValue> buildValue(const UChar* start, const UChar* end, cons
 
             // After a list value, we expect a comma or the end of the list.
             start = tokenEnd;
-            token = parseToken(start, end, &tokenEnd);
+            token = parseToken(start, end, &tokenStart, &tokenEnd);
             if (token == LIST_SEPARATOR) {
                 start = tokenEnd;
-                token = parseToken(start, end, &tokenEnd);
+                token = parseToken(start, end, &tokenStart, &tokenEnd);
                 if (token == ARRAY_END)
                     return 0;
             } else if (token != ARRAY_END) {
@@ -391,16 +397,16 @@ PassRefPtr<InspectorValue> buildValue(const UChar* start, const UChar* end, cons
     case OBJECT_BEGIN: {
         RefPtr<InspectorObject> object = InspectorObject::create();
         start = tokenEnd;
-        token = parseToken(start, end, &tokenEnd);
+        token = parseToken(start, end, &tokenStart, &tokenEnd);
         while (token != OBJECT_END) {
             if (token != STRING)
                 return 0;
             String key;
-            if (!decodeString(start + 1, tokenEnd - 1, &key))
+            if (!decodeString(tokenStart + 1, tokenEnd - 1, &key))
                 return 0;
             start = tokenEnd;
 
-            token = parseToken(start, end, &tokenEnd);
+            token = parseToken(start, end, &tokenStart, &tokenEnd);
             if (token != OBJECT_PAIR_SEPARATOR)
                 return 0;
             start = tokenEnd;
@@ -413,10 +419,10 @@ PassRefPtr<InspectorValue> buildValue(const UChar* start, const UChar* end, cons
 
             // After a key/value pair, we expect a comma or the end of the
             // object.
-            token = parseToken(start, end, &tokenEnd);
+            token = parseToken(start, end, &tokenStart, &tokenEnd);
             if (token == LIST_SEPARATOR) {
                 start = tokenEnd;
-                token = parseToken(start, end, &tokenEnd);
+                token = parseToken(start, end, &tokenStart, &tokenEnd);
                  if (token == OBJECT_END)
                     return 0;
             } else if (token != OBJECT_END) {
